--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,13 @@
   /* background-color: burlywood; */
 
 }
-
+.what-is .res {
+  font-family: 'Courier New', Courier, monospace !important;
+  font-size: 2rem !important;
+  font-weight: 800 !important;
+  color: rgb(255, 255, 255) !important;
+  background-color: rgb(39, 19, 77)
+}
 
 .presale {
   font-family: 'Courier New', Courier, monospace !important;
