added ticker info

--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,11 @@
   flex-direction: column;
 
 }
+
+.what-is a {
+  text-decoration: none;
+  color: lightseagreen;
+}
 .nft {
   /* background-color: aliceblue; */
   width: 50%;
